added header and menu

--- a/layout.html.erb
+++ b/layout.html.erb
@@ -3,15 +3,29 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="photoshop_sida.css"/>
 	<meta charset="utf-8"/>
-	<title>Games, Games and more Games</title>
+	<title>Stoof</title>
 </head>
 <body>
 	<div id="main">
-		<div id="logo"></div>
-		<div id="header"></div>
-		<div id="menu"></div>
+		<div id="logo"><a href="./index.html"><img src="logo.png"></a></div>
+
+		<div id="header"><a href="potato.html"><img src="header.png"></a></div>
+
+		<div id="menu">
+
+			<ul>
+				<li><a href="./testsida.html">test</a></li>
+				<li>test2</li>
+				<li>test3</li>
+				<li>sista test</li>
+			</ul>	
+
+		</div>
+
 		<div id="content">
+
 			<%= yield %>
+			
 		</div>
 	</div>
 	
