--- a/public/photoshop_sida.css
+++ b/public/photoshop_sida.css
@@ -13,7 +13,7 @@ body {
 	margin-right: auto;
 	width: 1287px; /*1287px*/
 	height: auto;
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 }
 
 #logo {
@@ -23,7 +23,7 @@ body {
 	margin-top: -1px;
 	width: auto;
 	height: 150px;
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 }
 
 
@@ -34,7 +34,7 @@ body {
 	margin-right: -1px;
 	width: 1136px;
 	height: 150px;
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 }
 
 #menu {
@@ -42,21 +42,20 @@ body {
 	position: relative;
 	margin-left: -1px;
 	margin-top: -1px;
-	margin-right: -1px;
 	width: 150px;
 	height: auto;
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 }
 
 #content {
-	/*position: relative;*/
+	position: relative;
 	width: 1136px;
 	height: auto;
-	margin-left: 149px;
+	margin-left: 150px;
 	margin-right: -1px;
 	margin-top: -1px;
 	margin-bottom: -1px;
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 }
 
 a{  text-decoration: none;
