--- a/layout.html.erb
+++ b/layout.html.erb
@@ -7,17 +7,17 @@
 </head>
 <body>
 	<div id="main">
-		<div id="logo"><a href="./index.html"><img src="logo.png"></a></div>
+		<div id="logo"> <a href="./index.html"><img src="logo.png"> </a> </div>
 
-		<div id="header"><a href="potato.html"><img src="header.png"></a></div>
+		<div id="header"> <a href="potato.html"><img src="header.png"> </a> </div>
 
 		<div id="menu">
 
 			<ul>
-				<li><a href="./photoshopsida.html">Photos</a></li>
-				<li>test2</li>
-				<li>test3</li>
-				<li>sista test</li>
+				<li> <a id= "info" href= "info.html"></a> </li>
+				<li> <a id= "photos" href= "./photoshopsida.html"></a> </li>
+				<li></li>
+				<li></li>
 			</ul>	
 
 		</div>
