--- a/photoshopsida.html.erb
+++ b/photoshopsida.html.erb
@@ -1,2 +1,2 @@
-<img src="farcry.png"><br>
-<img src="">
+<a href="http://far-cry.ubi.com/fc-portal/en-SE/home/"><img src="farcry.png"></a><br>
+<img src="marionuketank.png">
