added review and start button ^^

--- a/layout.html.erb
+++ b/layout.html.erb
@@ -14,10 +14,10 @@
 		<div id="menu">
 
 			<ul>
+				<li> <a id= "start" href="./index.html"></a></li>
 				<li> <a id= "info" href= "info.html"></a> </li>
 				<li> <a id= "photos" href= "./photoshopsida.html"></a> </li>
-				<li></li>
-				<li></li>
+				<li> <a id= "review" href="./review.html"></a></li>
 			</ul>	
 
 		</div>
