--- a/public/photoshop_sida.css
+++ b/public/photoshop_sida.css
@@ -82,6 +82,26 @@ a{  text-decoration: none;
 	background-repeat: no-repeat;
 }
 
+#start {
+	background-image: url('start-b.png');
+	background-repeat: no-repeat;
+}
+
+#start:hover {
+	background-image: url('start-b_pressed.png');
+	background-repeat: no-repeat;
+}
+
+#review {
+	background-image: url('review-b.png');
+	background-repeat: no-repeat;
+}
+
+#review:hover {
+	background-image: url('review-b_pressed.png');
+	background-repeat: no-repeat;
+}
+
 
 
 li {
@@ -94,4 +114,8 @@ li {
 	display: block;
 	height: 45px;
 	width: 105px;
+}
+
+p {
+	font-size: 0.5cm;
 }
